--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "csv-loader": "^3.0.5"
   }
 }
